--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,22 @@
 body{
-    background: #f6f7f8;
+    background: #f2f2f2;
     padding: 0;
     margin: 0;
+    display: block;
+    padding-top: 0px !important;
+    padding-bottom: 0px !important;
+}
+html, body{
+    overflow-x: hidden;
 }
 a{
     text-decoration: none;
     color: #23a6d5;
+}
+div{
+    display: block;
+    margin: 0;
+    padding: 0;
 }
 .main{
     position: relative;
@@ -26,30 +37,69 @@ a{
     flex-direction: column;
     align-items: center;
 }
-#title{
-    display: grid;
-    grid-auto-flow: column;
-    grid-template-columns: 1fr 1fr;
-    align-items: center; 
+@media screen and (min-width: 900px){
+    .container {
+        width: 900px;
+        display: flex;
+    }
 }
-.title1, .title2{
-    width: 400px;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+@media screen and (max-width: 899.98px){
+    .container {
+        padding: 0 15px;
+        display: block;
+    }
+    .box{
+        float: left;
+    }
 }
 .container{
-    display: grid;
-    grid-auto-flow: column;
-    grid-template-columns: 1fr 1fr;
-    align-items: center; 
+    padding: 0 2px;
+    position: relative;
+    margin: 0 auto;
+    box-sizing: border-box;
 }
-.blog, .site{
-    width: 400px;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    height: auto;
+.container > *{
+    padding: 5px;
+}
+.box{
+    width: 100%;
+    position: relative;
+    display: block;
+    text-align: center;
+    box-sizing: border-box;
+}
+.box:after, .box:before{
+    content: "";
+    display: block;
+    clear: both;
+}
+.box-card{
+    margin-bottom: 15px;
+    border-radius: 10px;
+    background-color: #fff;
+}
+.box-card:last-child{
+    margin-bottom: 0;
+}
+.card-header {
+    position: relative;
+    height: 42px;
+    line-height: 42px;
+    padding: 0 15px;
+    border-bottom: 1px solid #f6f6f6;
+    color: #333;
+    border-radius: 2px 2px 0 0;
+    font-size: 14px;
+}
+.card-body{
+    padding-left: 110px;
+    min-height: 100px;
+    position: relative;
+    padding: 10px 15px;
+    line-height: 24px;
+}
+.card-container div{
+    margin: 5px;
 }
 .footer{
     margin-top: 100px;
